add fire drop and recycle information

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -61,14 +61,17 @@ Portal能量不足的原因
 \begin{enumerate}
 \item 自然衰减，这是游戏设定的没法改变；
 \item 被敌方攻击。
-
 \end{enumerate}
-
 在个人成就里有个recharge和guardian奖章都必须通过此操作才能拿到。
 
 \section{关于Fire}
+当要摧毁地方的脚时需要使用XMP进行fire，长按屏幕再点击fire XMP可以快速使用摧毁工具。XMP的等级从1到8威力依次增强，按XMP时自己周围会出现能量环从中间向四周发散，越靠近中间额外增加的威力越强。
 
-\section{关于Drop与Recycle}
+\section{关于Drop}
+Drop操作可以将物品仓库中的物品丢到地上，丢的地点就是当前的位置（三角的位置）。
+
+\section{关于Recycle}
+由于所有物品都是XM的转化形式（请参考剧情），所以所有的物品也可以转化成XM。但是游戏内购后用金钱买的的道具不可以recycle.
 
 \section{关于Passcode}
 是通过解析media所得的相当于道具礼包的东东。【G+好像有人给过破解的一些方法，不过我木有研究过，此处不做过多解释，有兴趣的可以去G+翻翻前辈们的帖子】Media有等级之分，越高等级的passcode存活时间越短（因为世界通用）。所以手慢无哦~获得渠道一般去G+有分享群，还有群里随时有人转发！
