不定期小更新

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -42,8 +42,9 @@
 首先欢迎大家加入绿军大家庭！ingress是一个需要点探索精神和脱宅毅力的游戏~所以多出门是必要、必须、必做到的大大大前提。如果你懒得出门，懒得研究~个人建议，不如在家里玩玩PS3或者魔兽神马的，有空调、可乐、炸薯条的日子也是很美好滴！下面写的，也基本都是些技巧、窍门之类的。 看不懂的词，请查阅中文网（尤其英文不好的童鞋们），百度贴吧里则有很多新手提问，应该能解决大部分游戏进不去神马的这类问题。建议新手多多利用搜索功能，不要坐定伸手党 ：）
 
 \section{关于流量}
-这是个问题~~要说一个月包多少呢，我也不好说，看你玩的程度。这里教大家一个省流量的方法，就是google map有一个离线下载的功能，允许在离线状态下使用。还是可以省下不少的哟！：） 我上下班路上扫扫po，给po充充电啥的，大概20M每天。稍微多走点地方，就30-40M。这个大家根据自己情况可以估算一下。另外一般各高校开学，移动和联通都会有很多划算的套餐办理，具体移动和联通的优惠信息大家可以在群里咨询，会有很多小伙伴提供信息给你。
-
+这是个问题~~要说一个月包多少呢，我也不好说，看你玩的程度。这里教大家一个省流量的方法，就是google map有一个离线下载的功能，允许在离线状态下使用。还是可以省下不少的哟！：） 我上下班路上扫扫po，给po充充电啥的，大概20M每天。稍微多走点地方，就30-40M（2014年）。这个大家根据自己情况可以估算一下。另外一般各高校开学，移动和联通都会有很多划算的套餐办理，具体移动和联通的优惠信息大家可以在群里咨询，会有很多小伙伴提供信息给你。
+-------------
+在2018年流量应该不是个问题了吧。
 \section{关于XM}
 就是你地图上看的小白点~游戏界面上，横在最上面的那一条长得像血槽的东东~它是游戏里你一切动作的能量条！根据等级增长会有定额增长。获取方法就是溜达~还有可贵的power cube以及回收道具。
 
@@ -138,7 +139,7 @@ Portal能量不足的原因：（1） 自然衰减，这是游戏设定的没法
 Drop操作可以将物品仓库中的物品丢到地上，丢的地点就是当前的位置（三角的位置）。
 
 \section{关于Recycle}
-由于所有物品都是XM的转化形式（请参考剧情），所以所有的物品也可以转化成XM。但是游戏内购后用金钱买的的道具不可以recycle.
+由于所有物品都是XM的转化形式（请参考剧情），所以所有的物品也可以转化成XM。钥匙回收后的XM值要远大于其他道具，所以一堆钥匙可以当糖吃哦。但是游戏内购后用金钱买的的道具不可以recycle.
 
 \section{关于Passcode}
 是通过解析media所得的相当于道具礼包的东东。【G+好像有人给过破解的一些方法，不过我木有研究过，此处不做过多解释，有兴趣的可以去G+翻翻前辈们的帖子】Media有等级之分，越高等级的passcode存活时间越短（因为世界通用）。所以手慢无哦~获得渠道一般去G+有分享群，还有群里随时有人转发！
@@ -167,8 +168,8 @@ Ultra strike 是用来专门摧毁敌方mod（sheild和turrent）的工具，使
 
 \section{关于偏移}
 国家出于安全考虑,为了不让重要的位置的地理信息暴露,在所有的电子地图服务提供商都需要给地图数据加上偏移和加密,所以我们在使用google,baidu等电子地图服务商的地图时，就会发现显示在地图上的位置和实际的位置不一致的情况。卫星图没有偏移量问题，卫星图不在地图的范畴中。\par
-但是在游戏里人物和P点是一起偏的，所以只是街道不对，但P点和你的相对位置是正确的，所以只要在现实里走到位置，在游戏里也就到位了。也就是说，在http://ingress.com/intel中查看卫星地图、记录位置，然后在现实中走过去就好了。
-
+但是在游戏里人物和P点是一起偏的，所以只是街道不对，但P点和你的相对位置是正确的，所以只要在现实里走到位置，在游戏里也就到位了。也就是说，在http://ingress.com/intel中查看卫星地图、记录位置，然后在现实中走过去就好了。\par
+2017年底的一次更新解决了中国大陆位置偏移的问题，中国玩家终于可以开始使用游戏里的地图了。
 \section{关于搭梯}
 想要玩ingress进行翻墙是必须具备的条件，翻墙的方法也有很多，下面从Android和IOS两个方面分别详细说明。
 
